--- a/scss/_presentation.scss
+++ b/scss/_presentation.scss
@@ -26,8 +26,8 @@ pre {
     margin: 0 0.4rem;
     padding: 0.4rem;
 
-    color: var(--sidebar-fg);
-    background-color: var(--theme-popup-bg);
+    color: var(--hover-fg);
+    background-color: var(--popup-bg);
 
     border: 0.1rem solid var(--icons);
     border-radius: 0.4rem;
@@ -38,7 +38,7 @@ pre {
     cursor: pointer;
 
     &:hover {
-      color: var(--sidebar-active);
+      color: var(--hover-fg);
       border-color: var(--icons-hover);
       background-color: var(--theme-hover);
     }
@@ -72,8 +72,8 @@ mark {
   top: var.$menu-bar-height;
 
   color: var(--fg);
-  background-color: var(--theme-popup-bg);
-  border: 0.1rem solid var(--theme-popup-border);
+  background-color: var(--popup-bg);
+  border: 0.1rem solid var(--popup-border);
 }
 
 .table-wrapper {
@@ -135,7 +135,7 @@ kbd {
 
   background-color: var(--table-border-color);
   border-radius: 0.4em;
-  box-shadow: inset 0 -0.3em 0 var(--theme-popup-border);
+  box-shadow: inset 0 -0.3em 0 var(--popup-border);
 
   margin: 0 0.14em;
   padding: 0.3em 0.4em;
