fix: The `footnote` pop-up has unintentionally acquired Violet Parr's ability 🦸‍♀️

--- a/scss/_footnote.scss
+++ b/scss/_footnote.scss
@@ -37,8 +37,8 @@
   margin-right: auto;
 
   color: var(--fg);
-  background-color: var(--theme-popup-bg);
-  border: 0.1rem solid var(--theme-popup-border);
+  background-color: var(--popup-bg);
+  border: 0.1rem solid var(--popup-border);
 
   max-height: 64dvh;
   padding: 1rem 1rem;
