Adjust the operation of the TOC 🏓

--- a/scss/_table-of-contents.scss
+++ b/scss/_table-of-contents.scss
@@ -89,6 +89,7 @@ $toc-inline-offset: 5rem !default;
 }
 
 .bottomtoc {
+  display: none;
   inline-size: max(0px, calc(100svw - $toc-inline-offset));
 
   ::-webkit-scrollbar {
