--- a/scss/catppuccin/frappe.scss
+++ b/scss/catppuccin/frappe.scss
@@ -11,6 +11,10 @@ $hover: (
   hover-fg: #8caaee,
 );
 
+$mark: (
+  search-mark-bg: #ef9f76,
+);
+
 $popup: (
   popup-bg: #292c3c,
 );
@@ -40,7 +44,6 @@ $popup: (
   --searchresults-header-fg: #c6d0f5;
   --searchresults-border-color: #414559;
   --searchresults-li-bg: #303446;
-  --search-mark-bg: #ef9f76;
   --color-scheme: dark;
 
   --popup-border: #737994;
@@ -51,6 +54,7 @@ $popup: (
 
   @include utils.convert-rgb($hover);
   @include utils.convert-rgb($active);
+  @include utils.convert-rgb($mark);
 
   @include utils.convert-hsl($popup, 4%);
 }
